<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="24dp"
        tools:context=".todoListPreview.TodoListPreview">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/previewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_list_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/previewSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/todo_list_deadline"
                android:textColor="@color/black"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/previewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/todo_list_description"
                android:textColor="@color/black" />

        <ImageView
                android:id="@+id/previewImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="todo list image" />
    </LinearLayout>

    <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/todo_list_edit_button" />
</RelativeLayout>